tests/NormalTests/paczka1/fuzzy1/72019455.err
Error in line 16: z06dOHcsE0 S283 31,6
Error in line 12: S961 S283 69,5
Error in line 19: z06dOHcsE0 A76 39,6
